created html for connect and inscription

--- a/index.html
+++ b/index.html
@@ -1,14 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <h1>Site d'annonce</h1>
-        <button>Se connecter</button>
-    </header>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Gaming</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<h1>Gaming</h1>
+			<a href="create.html"><button class="create">Créer une annonce</button></a>
+			<nav>
+				<input
+					type="search"
+					label="search"
+					placeholder="Ecrire votre recherche..."
+				/>
+				<button>
+					<img
+						class="loupe"
+						src="https://static.vecteezy.com/system/resources/previews/009/589/346/non_2x/magnifying-icon-magnifying-clipart-transparent-free-png.png"
+						alt="une loupe"
+					/>
+				</button>
+				<a href="connexion.html"><button>Se connecter</button></a>
+
+				<a href="inscription.html"><button>S'inscrire</button></a>
+			</nav>
+		</header>
+		<main>
+			<h2>Bienvenue sur notre magnifique site d'annonces !</h2>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
+		</main>
+		<footer>
+			<h3>Copyright - 2024</h3>
+		</footer>
+	</body>
+	<script src="script.js"></script>
 </html>
