modified design a bit

--- a/connexion.html
+++ b/connexion.html
@@ -26,16 +26,11 @@
 					label="password"
 					placeholder="Ecrire votre mot de passe..."
 				/>
-				<label for="confirm-password"
-					>Confirmez votre mot de passe</label
-				>
-				<input
-					type="password"
-					label="confirm-password"
-					placeholder="Confirmez votre mot de passe..."
-				/>
+
 				<div class="checkbox"></div>
 				<button class="submit">Se connecter</button>
+				<p>Pas de compte ?</p>
+				<a href="inscription.html">S'inscrire</a>
 			</div>
 		</main>
 		<footer>
