--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<body>
 		<header>
 			<h1>Gaming</h1>
-			<a href="create.html"><button class="create">Créer une annonce</button></a>
+			<a href="create.html"
+				><button class="create">Créer une annonce</button></a
+			>
 			<nav>
 				<input
 					type="search"
@@ -28,8 +30,56 @@
 				<a href="inscription.html"><button>S'inscrire</button></a>
 			</nav>
 		</header>
+		<section>
+			<h1>Site d'annonce de fou ! </br> Postulez vos annonces dès maintenant !</h1>
+		</section>
+
 		<main>
-			<h2>Bienvenue sur notre magnifique site d'annonces !</h2>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+				</p>
+				<h3>Username</h3>
+			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
 				<img
