cleaned code and added login fetch database

--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -4,14 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Gaming</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./index.css" />
 	</head>
 	<body>
 		<header>
 			<h1>Gaming</h1>
-			<a href="create.html"
-				><button class="create">Créer une annonce</button></a
-			>
+			<a href="../Annonce/annonce.html" </a> 
+				<button class="create">Créer une annonce</button></a>
 			<nav>
 				<input
 					type="search"
@@ -25,9 +24,9 @@
 						alt="une loupe"
 					/>
 				</button>
-				<a href="connexion.html"><button>Se connecter</button></a>
+				<a href="../Login/login.html"><button>Se connecter</button></a>
 
-				<a href="inscription.html"><button>S'inscrire</button></a>
+				<a href="../Register/register.html"><button>S'inscrire</button></a>
 			</nav>
 		</header>
 		<section>
@@ -130,5 +129,4 @@
 			<h3>Copyright - 2024</h3>
 		</footer>
 	</body>
-	<script src="script.js"></script>
 </html>
