changed everything to cats

--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -3,34 +3,29 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Gaming</title>
+		<title>Le Bon Chat</title>
 		<link rel="stylesheet" href="./index.css" />
 	</head>
 	<body>
 		<header>
-			<h1>Gaming</h1>
+			<h1>Le Bon Chat</h1>
 			<a href="../Annonce/annonce.html" </a> 
 				<button class="create">Créer une annonce</button></a>
 			<nav>
 				<input
+				class="search"
 					type="search"
 					label="search"
 					placeholder="Ecrire votre recherche..."
 				/>
-				<button>
-					<img
-						class="loupe"
-						src="https://static.vecteezy.com/system/resources/previews/009/589/346/non_2x/magnifying-icon-magnifying-clipart-transparent-free-png.png"
-						alt="une loupe"
-					/>
-				</button>
+				
 				<a href="../Login/login.html"><button>Se connecter</button></a>
 
-				<a href="../Register/register.html"><button>S'inscrire</button></a>
+				<a href="../Register/register.html"><button class="btn-register">S'inscrire</button></a>
 			</nav>
 		</header>
 		<section>
-			<h1>Site d'annonce de fou ! </br> Postulez vos annonces dès maintenant !</h1>
+			<h1>Site d'annonce de chats ! </br> Créez vos annonces dès maintenant !</h1>
 		</section>
 
 		<main>
