--- a/src/Register/register.html
+++ b/src/Register/register.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>Gaming</title>
+		<title>Le Bon Chat</title>
 		<link rel="stylesheet" href="register.css" />
 	</head>
 	<body>
 		<header>
-			<a href="../Index/index.html"><h1>Gaming</h1></a>
+			<a href="../Index/index.html"><h1>Le Bon Chat</h1></a>
 		</header>
 		<main>
 			<div class="form">
