--- a/src/Annonce/annonce.html
+++ b/src/Annonce/annonce.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Gaming</title>
+		<title>Le Bon Chat</title>
 		<link rel="stylesheet" href="./annonce.css" />
 	</head>
 	<body>
 		<header>
-			<a href="../Index/index.html"><h1>Gaming</h1></a>
+			<a href="../Index/index.html"><h1>Le Bon Chat</h1></a>
 		</header>
 		<main>
 			<div class="form">
@@ -28,12 +28,10 @@
 						label="description"
 						placeholder="Ecrire votre description..."
 					/>
-					
+
 					<button class="submit" onclick="handleRegister()">
 						Soumettre
 					</button>
-					<p>Déjà membre ?</p>
-					<a href="../Login/login.html">Se connecter</a>
 				</form>
 			</div>
 		</main>
