connected annonce to db and added delete button

--- a/src/Annonce/annonce.html
+++ b/src/Annonce/annonce.html
@@ -21,6 +21,12 @@
 						label="title"
 						placeholder="Ecrire votre titre..."
 					/>
+					<label for="image">Image</label>
+					<img
+						src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"
+						alt="un chat"
+						id="image"
+					/>
 					<label for="description">Description</label>
 					<input
 						class="description"
@@ -29,7 +35,7 @@
 						placeholder="Ecrire votre description..."
 					/>
 
-					<button class="submit" onclick="handleRegister()">
+					<button class="submit" onclick="handleAnnonce()">
 						Soumettre
 					</button>
 				</form>
@@ -39,4 +45,5 @@
 			<h3>Copyright - 2024</h3>
 		</footer>
 	</body>
+	<script src="annonce.js"></script>
 </html>
