added disconnect button and function

--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -18,8 +18,8 @@
 					label="search"
 					placeholder="Ecrire votre recherche..."
 				/>
-				
-				<a href="../Login/login.html"><button>Se connecter</button></a>
+				<button class="disconnect hidden">Se déconnecter</button>
+				<a href="../Login/login.html"><button class="btn-login">Se connecter</button></a>
 
 				<a href="../Register/register.html"><button class="btn-register">S'inscrire</button></a>
 			</nav>
