--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -5,28 +5,38 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Le Bon Chat</title>
 		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="index-responsive.css">
 	</head>
+
 	<body>
+
+
 		<header>
-			<h1>Le Bon Chat</h1>
-			<a href="../Annonce/annonce.html" </a> 
-				<button class="create">Créer une annonce</button></a>
+
+			<h2>Le Bon Chat</h2>
+			<a href="../Annonce/annonce.html">
+				<button class="btn-annonce">Créer une annonce</button></a>
+			
 			<nav>
-				<input
-				class="search"
-					type="search"
-					label="search"
-					placeholder="Ecrire votre recherche..."
-				/>
 				<button class="disconnect hidden">Se déconnecter</button>
 				<a href="../Login/login.html"><button class="btn-login">Se connecter</button></a>
-
 				<a href="../Register/register.html"><button class="btn-register">S'inscrire</button></a>
 			</nav>
+
 		</header>
+
+
 		<section>
-			<h1>Site d'annonce de chats ! </br> Créez vos annonces dès maintenant !</h1>
+			<div class="section-img">
+				<img src="https://www.chromethemer.com/download/hd-wallpapers/colorful-space-cat-7680x4320.jpg" alt="Un super chat cosmique !">
+			</div>
+			<div class="section-h1">
+				<h1>Site d'annonce de chats ! </br> 
+					Créez vos annonces dès maintenant !
+				</h1>
+			</div>
 		</section>
+
 
 		<main>
 			<div class="annonce">
@@ -35,14 +45,20 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
@@ -50,14 +66,20 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
@@ -65,14 +87,20 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
@@ -80,14 +108,20 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
@@ -95,14 +129,20 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
 			<div class="annonce">
 				<h2>Annonce 1</h2>
@@ -110,19 +150,75 @@
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
 					alt="un chat"
 				/>
-				<p>
+				<div class="annonce-p">
+					<p>
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Perspiciatis inventore expedita iusto nemo magni ducimus
 					ullam, possimus voluptate commodi officiis reiciendis dolore
 					accusamus, corporis provident corrupti delectus voluptas ab
 					necessitatibus!
-				</p>
-				<h3>Username</h3>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
 			</div>
+			
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<div class="annonce-p">
+					<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
+			</div>
+
+			<div class="annonce">
+				<h2>Annonce 1</h2>
+				<img
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
+					alt="un chat"
+				/>
+				<div class="annonce-p">
+					<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perspiciatis inventore expedita iusto nemo magni ducimus
+					ullam, possimus voluptate commodi officiis reiciendis dolore
+					accusamus, corporis provident corrupti delectus voluptas ab
+					necessitatibus!
+					</p>
+				</div>
+			</div>
+
 		</main>
+
+
 		<footer>
 			<h3>Copyright - 2024</h3>
 		</footer>
+
+
 	</body>
+
 	<script src="index.js"></script>
 </html>
