--- a/src/Register/register.html
+++ b/src/Register/register.html
@@ -10,63 +10,64 @@
 	<body>
 		<header>
 			<a href="../Index/index.html"><h1>Le Bon Chat</h1></a>
+			<a href="../Index/index.html"
+				><button>Retour à l'accueil</button></a
+			>
 		</header>
 		<main>
-			<div class="form">
-				<form class="signup">
-					<h2>Inscription</h2>
-					<label for="firstName">Prénom</label>
-					<input
-						class="firstName"
-						type="text"
-						label="firstName"
-						placeholder="Ecrire votre prénom..."
-					/>
-					<label for="name">Nom</label>
-					<input
-						class="lastName"
-						type="text"
-						label="name"
-						placeholder="Ecrire votre nom..."
-					/>
-					<label for="email">E-mail</label>
-					<input
-						class="email"
-						type="email"
-						label="email"
-						placeholder="Ecrire votre e-mail..."
-					/>
-					<label for="password">Mot de passe</label>
-					<input
-						class="password"
-						type="password"
-						label="password"
-						autocomplete="on"
-						placeholder="Ecrire votre mot de passe..."
-					/>
-					<label for="confirm-password"
-						>Confirmez votre mot de passe</label
+			<form class="signup">
+				<h2>Inscription</h2>
+				<label for="firstName">Prénom</label>
+				<input
+					class="firstName"
+					type="text"
+					label="firstName"
+					placeholder="Ecrire votre prénom..."
+				/>
+				<label for="name">Nom</label>
+				<input
+					class="lastName"
+					type="text"
+					label="name"
+					placeholder="Ecrire votre nom..."
+				/>
+				<label for="email">E-mail</label>
+				<input
+					class="email"
+					type="email"
+					label="email"
+					placeholder="Ecrire votre e-mail..."
+				/>
+				<label for="password">Mot de passe</label>
+				<input
+					class="password"
+					type="password"
+					label="password"
+					autocomplete="on"
+					placeholder="Ecrire votre mot de passe..."
+				/>
+				<label for="confirm-password"
+					>Confirmez votre mot de passe</label
+				>
+				<input
+					class="confirmPassword"
+					type="password"
+					label="confirm-password"
+					autocomplete="on"
+					placeholder="Confirmez votre mot de passe..."
+				/>
+				<div class="checkbox">
+					<input type="checkbox" label="checkbox" />
+					<label for="checkbox"
+						>Acceptez les Termes & Conditions</label
 					>
-					<input
-						class="confirmPassword"
-						type="password"
-						label="confirm-password"
-						autocomplete="on"
-						placeholder="Confirmez votre mot de passe..."
-					/>
-					<div class="checkbox">
-						<input type="checkbox" label="checkbox" />
-						<label for="checkbox"
-							>Acceptez les Termes & Conditions</label
-						>
-					</div>
-					<button class="submit" onclick="handleRegister()">
-						Soumettre
-					</button>
-					<p>Déjà membre ?</p>
-					<a href="../Login/login.html">Se connecter</a>
-				</form>
-			</div>
+				</div>
+				<button class="submit" onclick="handleRegister()">
+					Soumettre
+				</button>
+				<p>Déjà membre ?</p>
+				<a href="../Login/login.html">Se connecter</a>
+			</form>
 		</main>
 		<footer>
 			<h3>Copyright - 2024</h3>
