--- a/src/Index/index.html
+++ b/src/Index/index.html
@@ -11,6 +11,9 @@
   <body>
     <header>
       <h2>Le Bon Chat</h2>
+      <a href="../Admin/admin.html" class="btn-admin"
+        ><button class="btn-admin">Administrateur</button></a
+      >
       <a href="../Annonce/annonce.html">
         <button class="btn-annonce">Créer une annonce</button></a
       >
@@ -41,162 +44,7 @@
       </div>
     </section>
 
-    <main>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-
-      <div class="annonce">
-        <h2>Annonce 1</h2>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg"
-          alt="un chat"
-        />
-        <div class="annonce-p">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Perspiciatis inventore expedita iusto nemo magni ducimus ullam,
-            possimus voluptate commodi officiis reiciendis dolore accusamus,
-            corporis provident corrupti delectus voluptas ab necessitatibus!
-          </p>
-        </div>
-      </div>
-    </main>
+    <main></main>
 
     <footer>
       <h3>Copyright - 2024</h3>
